syntax = "proto3";

option csharp_namespace = "Streamer";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc StreamingServer(StreamRequest) returns (stream StreamImages);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message StreamRequest {
  int32 index = 1;
  int32 x =2;
  int32 y =3;
  int32 w =4;
  int32 h =5;
  bool stop =6;
}

message StreamImages {
  bytes image = 1;
}
